# nexscribe

./: .gitignore  .pylintrc  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
nexscribe/ai/: chat.py
nexscribe/core/: _aliases.py
nexscribe/log/: __init__.py  level.py  logger.py
nexscribe/util/: functiontools.py  pipeline.py  queuetuple.py  types.py
tests/: test_pipeline.py  test_queuetuple.py  test_types.py
typings/type_check/: __init__.pyi  __private__.pyi  builtin_checks.pyi  core.pyi  primitives.pyi  proxy.pyi  transparent.pyi
