[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurum*", "nexscribe*"]

[project]
name = "nexscribe"
version = "0.3.0"
description = "NeXScribe"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
    "rttc>=1.0.6",
    "type-check>=0.1.8",
]

[dependency-groups]
dev = [
    "nexscribe",
    "pylint>=4.0.5",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13"
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
nexscribe = { workspace = true }
